hphp/test/zend/good/ext/ftp/tests/ftp_rawlist_basic2.php
<?php
require 'server.inc';

$ftp = ftp_connect('127.0.0.1', $port);
ftp_login($ftp, 'user', 'pass');
if (!$ftp) die("Couldn't connect to the server");

var_dump(ftp_rawlist($ftp, 'no_exists/'));
?>